Problema do js resolvido implementand os erros em forma de lista

--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario AV3</title>
+    <title>Formulário de Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="card-principal">
-        <h1>LOGIN</h1>
-        <p>Faça seu login abaixo</p>
-        <form class="formulario" onsubmit="return validar()">
+        <h1>Login</h1>
+        <form id="loginForm" onsubmit="return validar()">
             <div class="entradas-textos">
-
-                <label for="email">Email</label>
-                <input id="email" type="text" name="email" placeholder="Email">
-
-                <label for="senha">Senha</label>
-                <input id="senha" type="password" name="senha" placeholder="Senha">
-
-            </div>
-            <div class="botao">
+                <label for="email">E-mail:</label>
+                <input type="text" id="email" name="email" value="" oninput="this.setAttribute('value', this.value)" placeholder="Digite seu e-mail">
+            
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" name="senha" value="" oninput="this.setAttribute('value', this.value)" placeholder="Digite sua senha">
+            
                 <button id="botao" type="submit">LOGIN</button>
             </div>
-            <div id="msg"></div>
         </form>
+        <div id="mensagem"></div>
     </div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
