Problema do js resolvido e melhorado

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="card-principal">
         <h1>Login</h1>
-        <form id="loginForm" onsubmit="return validar()">
+        <form id="form" onsubmit="return validar()">
             <div class="entradas-textos">
-                <label for="email">E-mail:</label>
-                <input type="text" id="email" name="email" value="" oninput="this.setAttribute('value', this.value)" placeholder="Digite seu e-mail">
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" value="" oninput="this.setAttribute('value', this.value)" placeholder="Email">
             
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha" value="" oninput="this.setAttribute('value', this.value)" placeholder="Digite sua senha">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" name="senha" value="" oninput="this.setAttribute('value', this.value)" placeholder="Senha">
             
                 <button id="botao" type="submit">LOGIN</button>
             </div>
